# python-package-exercise-project-3-team-8

./: .gitignore  Pipfile  README.md  asciiArt.py  output.txt  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/asciiarttools/: SharperContrast.txt  SofterContrast.txt  __main__.py  asciiarttools.py  brightened.txt  darkened.txt  out.txt
src/asiiarttools/: SharperContrast.txt  __main__.py  asciiarttools.py  brightened.txt  darkened.txt
src/examplepackagefb1258/: __main__.py
src/pyasciiart/: SofterContrast.txt  __main__.py  asciiArt.py  out.txt
tests/: test_asciiarttools.py  test_asiiarttools.py
